# rusty-quest-makepad

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
crates/rusty-quest-makepad-camera-shell/: Cargo.toml
crates/rusty-quest-makepad-camera-shell/src/: gpu_force_promotion.rs  lib.rs  matter_surface_exports.rs  mesh_replay_source.rs  stimulus_volume_gpu.rs  stimulus_volume_image_preview.rs  stimulus_volume_raymarch_preview.rs
crates/rusty-quest-makepad-matter-surface/: Cargo.toml
crates/rusty-quest-makepad-matter-surface/src/: adf.rs  adf_world.rs  config.rs  constants.rs  error.rs  frame.rs  geometry.rs  gpu_residency.rs  lib.rs  markers.rs  recorded_hand_source.rs  runtime.rs  source.rs  tests.rs  uploads.rs  worker.rs
crates/rusty-quest-makepad-matter-surface/src/gpu_residency/: field_construction.rs  field_force_probe.rs  field_force_sampling_probe.rs  field_particle_force_probe.rs  field_sampling_probe.rs  force_authority_candidate.rs  force_authority_gate.rs  force_authority_mode.rs  force_authority_residency.rs  force_authority_runtime_selection.rs  marker.rs  mesh_sdf_probe.rs  oracle_probe.rs  preflight.rs  render.rs  skinning_mesh_probe.rs  skinning_probe.rs  storage_probe.rs
crates/rusty-quest-makepad-mesh-replay/: Cargo.toml
crates/rusty-quest-makepad-mesh-replay/src/: lib.rs  live_equivalent.rs  recorded_hand.rs
crates/rusty-quest-makepad-profile/: Cargo.toml
crates/rusty-quest-makepad-profile/src/: lib.rs
docs/: ARCHITECTURE.md  MIGRATION.md  PROVENANCE.md  VALIDATION.md
fixtures/: README.md
fixtures/damaged/: missing-profile.bundle.json
fixtures/effective-settings/: mesh-replay.effective-settings.json
fixtures/lattice/: synthetic-display-view-set.json
fixtures/mesh-replay/: synthetic-hand-mesh-sequence.json
fixtures/profiles/: mesh-replay-recorded-left-particles-gpu-force.bundle.json  mesh-replay-recorded-left-particles-gpu-force.quest-runtime-profile.json  mesh-replay-recorded-left-particles-gpu-force.settings-profile.json  mesh-replay-recorded-left-particles.bundle.json  mesh-replay-recorded-left-particles.quest-runtime-profile.json  mesh-replay-recorded-left-particles.settings-profile.json  mesh-replay-recorded-left.bundle.json  mesh-replay-recorded-left.quest-runtime-profile.json  mesh-replay-recorded-left.settings-profile.json  mesh-replay.bundle.json  mesh-replay.quest-runtime-profile.json  mesh-replay.settings-profile.json  remote-camera-q2q.bundle.json  remote-camera-q2q.quest-runtime-profile.json  remote-camera-q2q.settings-profile.json  stimulus-interference.bundle.json  stimulus-interference.quest-runtime-profile.json  stimulus-interference.settings-profile.json  stimulus-volume-proof.bundle.json  stimulus-volume-proof.quest-runtime-profile.json  stimulus-volume-proof.settings-profile.json
fixtures/settings/: quest-makepad-camera-shell.settings.json
tools/: Build-QuestMakepadRecordedMeshReplay.ps1  Build-QuestMakepadRuntimeBundle.ps1  Expand-StimulusBrowserHandoff.ps1  Test-QuestMakepadProfiles.ps1  check_all.ps1  check_quest_makepad_boundaries.py
