[workspace]
members = [
    "crates/rusty-quest-makepad-camera-shell",
    "crates/rusty-quest-makepad-mesh-replay",
    "crates/rusty-quest-makepad-profile",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Till Holzapfel"]
license = "AGPL-3.0-or-later"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
