[package]
name = "rusty-quest-makepad-camera-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-quest-makepad-mesh-replay = { path = "../rusty-quest-makepad-mesh-replay" }
serde_json = "1"

[lints]
workspace = true
