[package]
name = "rusty-quest-makepad-camera-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-lattice-model = { git = "https://github.com/MesmerPrism/rusty-lattice.git", rev = "1279dfd88c15b54d53500218186acbeb81ebf61a" }
rusty-optics-model = { git = "https://github.com/MesmerPrism/rusty-optics.git", rev = "55e340e6698c993f2de81d7bbb650697906a4846", features = ["serde"] }
rusty-quest-makepad-matter-surface = { path = "../rusty-quest-makepad-matter-surface" }
rusty-quest-makepad-mesh-replay = { path = "../rusty-quest-makepad-mesh-replay" }
serde_json = "1"

[lints]
workspace = true
