[package]
name = "rusty-quest-makepad-camera-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
parallel = ["rusty-quest-makepad-matter-surface/parallel"]

[dependencies]
rusty-lattice-model = { git = "https://github.com/MesmerPrism/rusty-lattice.git", rev = "1279dfd88c15b54d53500218186acbeb81ebf61a" }
rusty-optics-model = { git = "https://github.com/MesmerPrism/rusty-optics.git", rev = "2ff51fd2e43654de4b253714e17eacb40655cf8f", features = ["serde"] }
rusty-optics-stimulus = { git = "https://github.com/MesmerPrism/rusty-optics.git", rev = "2ff51fd2e43654de4b253714e17eacb40655cf8f", features = ["serde"] }
rusty-quest-makepad-matter-surface = { path = "../rusty-quest-makepad-matter-surface" }
rusty-quest-makepad-mesh-replay = { path = "../rusty-quest-makepad-mesh-replay" }
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
