[package]
name = "rusty-quest-makepad-matter-surface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
parallel = ["rusty-matter-surface-runtime/parallel"]

[dependencies]
rusty-matter-adf = { path = "../../../rusty-matter/crates/rusty-matter-adf" }
rusty-matter-mesh = { path = "../../../rusty-matter/crates/rusty-matter-mesh" }
rusty-matter-model = { path = "../../../rusty-matter/crates/rusty-matter-model" }
rusty-matter-particles = { path = "../../../rusty-matter/crates/rusty-matter-particles" }
rusty-matter-sdf = { path = "../../../rusty-matter/crates/rusty-matter-sdf" }
rusty-matter-surface-runtime = { path = "../../../rusty-matter/crates/rusty-matter-surface-runtime" }
rusty-optics-mesh = { path = "../../../rusty-optics/crates/rusty-optics-mesh" }
rusty-optics-model = { path = "../../../rusty-optics/crates/rusty-optics-model" }
rusty-optics-particles = { path = "../../../rusty-optics/crates/rusty-optics-particles" }
rusty-quest-makepad-mesh-replay = { path = "../rusty-quest-makepad-mesh-replay" }

[lints]
workspace = true
